# tradecat

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  README_EN.md  install.sh
services/data-service/: .gitignore  README.md  pyproject.toml  requirements.txt
services/data-service/scripts/: start.sh
services/data-service/src/: __main__.py  config.py
services/data-service/src/adapters/: __init__.py  ccxt.py  rate_limiter.py  timescale.py
services/data-service/src/collectors/: alpha.py  backfill.py  downloader.py  metrics.py  ws.py
services/markets-service/: README.md  pyproject.toml  requirements.lock.txt  requirements.txt  数据下载.md
services/markets-service/scripts/: start.sh
services/markets-service/src/: __init__.py  __main__.py  config.py
services/markets-service/src/collectors/: __init__.py
services/markets-service/src/core/: __init__.py  fetcher.py  registry.py
services/markets-service/src/models/: __init__.py  candle.py  ticker.py  trade.py
services/markets-service/src/providers/: __init__.py
services/markets-service/src/providers/akshare/: __init__.py  candle.py
services/markets-service/src/providers/baostock/: __init__.py  candle.py
services/markets-service/src/providers/ccxt/: __init__.py  candle.py
services/markets-service/src/providers/cryptofeed/: __init__.py  stream.py
services/markets-service/src/providers/fredapi/: __init__.py  macro.py
services/markets-service/src/providers/openbb/: __init__.py  aggregator.py
services/markets-service/src/providers/quantlib/: __init__.py  pricing.py
services/markets-service/src/providers/yfinance/: __init__.py  candle.py
services/markets-service/src/storage/: __init__.py  timescale.py
services/trading-service/: .env.example  README.md  pyproject.toml
services/trading-service/scripts/: start.sh
services/trading-service/src/: __main__.py  config.py  kline_listener.py  kline_manager.py  realtime_service.py  simple_scheduler.py
services/trading-service/src/core/: async_full_engine.py  engine.py  event_engine.py
services/trading-service/src/db/: __init__.py  cache.py  reader.py  writer.py
services/trading-service/src/indicators/: __init__.py  base.py
services/trading-service/src/indicators/batch/: bollinger.py  data_monitor.py  futures_aggregate.py  futures_gap_monitor.py  harmonic.py  k_pattern.py  lean_indicators.py  liquidity.py  mfi.py  scalping.py  super_trend.py  support_resistance.py  trend_line.py  tv_big_money.py  tv_fib_sniper.py  tv_rsi.py  (+7 more)
services/trading-service/src/observability/: alerting.py  logger.py  metrics.py  tracing.py
services/trading-service/src/utils/: precision.py
(+123 files in other folders)
