[project]
name = "data-service"
version = "0.1.0"
description = "Cryptocurrency data collection and storage service for Binance USDT perpetual futures"
requires-python = ">=3.10"
dependencies = [
    "cryptofeed>=2.4.0",
    "ccxt>=4.0.0",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    "duckdb>=0.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
