[project]
name = "markets-service"
version = "0.1.0"
description = "Universal market data collection service - supports crypto, stocks, futures, options, forex, bonds"
requires-python = ">=3.10"
dependencies = [
    # 核心框架
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    
    # 数据库
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.1",
    
    # 加密货币
    "ccxt>=4.0.0",
    "cryptofeed>=2.4.0",
    
    # A股/国内市场
    "akshare>=1.14.0",
    "baostock>=0.8.8",
    
    # 美股/全球
    "yfinance>=0.2.40",
    "pandas-datareader>=0.10",
    
    # 宏观经济
    "fredapi>=0.5.0",
    
    # 通用
    "pandas>=2.0",
    "numpy>=1.24",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]
pricing = ["QuantLib>=1.30"]
aggregator = ["openbb>=4.0"]
all = ["QuantLib>=1.30", "openbb>=4.0"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
