[project]
name = "indicator-service"
version = "1.0.0"
description = "量化指标计算微服务"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "psycopg[binary]>=3.1",
    "redis>=4.5",
]

[project.optional-dependencies]
ta = ["ta-lib"]  # K线形态识别

[project.scripts]
indicator-service = "indicator_service.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
